# AI-Workspace

./: .env.example  .gitignore  CLEANUP_CHECKLIST.md  CODING_HISTORY_QUICK_START.md  CODING_HISTORY_RESCUE.md  COMMENT_INTEGRATION_COMPLETE.md  COMMENT_SCALING_COMPLETE.md  DICTATION_QUICK_REFERENCE.md  FINAL_REPORT.md  FIX_SHELL_AND_START_SERVER.sh  MANUAL_START_COMMANDS.txt  MIGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  RESCUE.md  RESTART_SERVER_NOW.sh  RESTART_TUBEDB_NOW.md  RSS_QUICKSTART.md  START_TUBEDB_PORT_7000.sh  TIMEOUT_FIX_DOCUMENTATION.md  TUBEDB_PORT_7000.md  YOUTUBE_COMMENTS_ANALYSIS.md  analyze_speakers.py  analyze_transcript_structure.py  analyze_youtube_db.py  api_server.py  auto_fix_shell_snapshots.sh  batch_processing_report_latest.json  batch_ready.py  check_coding_history_status.py  check_transcripts.py  debug_pinkbike_html.py  debug_pinkbike_page.html  emergency_test_runner.py  enable_coding_history.sh  enable_coding_history_mcp.py  enable_coding_history_mcp.sh  enable_yc_companies_mcp.py  fetch_and_process_new.py  fix_and_test_all.sh  (+38 more)
bi-chat/: .gitignore  QUICKSTART.md  README.md  start.sh
config/: business_intelligence_schema.json  content_sources_catalog.json  cycling_intelligence_schema.json  extended_railway_schema.sql  knowledge_domains.json  mem0_collections.py  railway_schema.sql  topic_taxonomy.json  video_metadata_schema.json
mcp-servers/business-intelligence/: README.md  pyproject.toml  schema_sync.py  server.py  server_lowlevel_backup.py
mcp-servers/business-intelligence/business_intelligence_mcp.egg-info/: SOURCES.txt
(+7239 files in other folders)
